--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+<head>
+<title>PharmaGov DEMO</title>
+</head>
 <body>
 <iframe title="PharmaGov_demo" width="100%" height="100%" src="https://app.powerbi.com/reportEmbed?reportId=76b32412-3070-4c5b-84cc-ccc77f543ec5&autoAuth=true&ctid=29d2596d-b712-4c6c-bb1f-88f9e3f753f7&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLXdlc3QtZXVyb3BlLWUtcHJpbWFyeS1yZWRpcmVjdC5hbmFseXNpcy53aW5kb3dzLm5ldC8ifQ%3D%3D" frameborder="0" allowFullScreen="true"></iframe>
 </body>
